--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -82,6 +82,11 @@ jobs:
           julec test --compiler clang -o test std/maps
           ./test
 
+      - name: Test - std/math
+        run: |
+          julec test --compiler clang -o test std/math/test
+          ./test
+
       - name: Test - std/math/big
         run: |
           julec test --compiler clang -o test std/math/big
