--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -82,6 +82,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/maps
           ./test
 
+      - name: Test - std/math
+        run: |
+          .\bin\julec test --compiler clang -o test std/math/test
+          ./test
+
       - name: Test - std/math/big
         run: |
           .\bin\julec test --compiler clang -o test std/math/big
