--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -96,6 +96,12 @@ jobs:
           g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/math
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/test
+          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/math/big
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/big
