--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -78,6 +78,11 @@ jobs:
           julec test --compiler gcc -o test std/maps
           ./test
 
+      - name: Test - std/math
+        run: |
+          julec test --compiler gcc -o test std/math/test
+          ./test
+
       - name: Test - std/math/big
         run: |
           julec test --compiler gcc -o test std/math/big
