--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -82,6 +82,11 @@ jobs:
           julec test --compiler clang -o test std/io/test
           ./test
 
+      - name: Test - std/jule/constant/lit
+        run: |
+          julec test --compiler clang -o test std/jule/constant/lit
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler clang -o test std/maps
