--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -82,6 +82,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/io/test
           ./test
 
+      - name: Test - std/jule/constant/lit
+        run: |
+          .\bin\julec test --compiler clang -o test std/jule/constant/lit
+          ./test
+
       - name: Test - std/maps
         run: |
           .\bin\julec test --compiler clang -o test std/maps
