--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -78,6 +78,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/io/test
           ./test
 
+      - name: Test - std/jule/constant/lit
+        run: |
+          .\bin\julec test --compiler gcc -o test std/jule/constant/lit
+          ./test
+
       - name: Test - std/maps
         run: |
           .\bin\julec test --compiler gcc -o test std/maps
