fix some typos & update `_typos.yml`
turns out that the `extend-ignore-identifiers-re` config field wasn't working properly and the correct way to "ignore" "words" is with `extend-words`

ref: https://github.com/crate-ci/typos/blob/master/docs/reference.md

Co-authored-by: mertcandav <mertcandav@outlook.com>

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,12 +1,8 @@
 # This TOML file used by the julelang/jule and julelang/manual repositories.
 # Configuration is common.
+[files]
+extend-exclude = ["std/html/entity.jule"]
+
 [default]
-extend-ignore-identifiers-re = [
-    "ue", "nd", "lok", "Thm",
-    "sur", "leasure", "asure", "nulll", "finf",
-    "iy", "ERROR_FILENAME_EXCED_RANGE", "FLE",
-    "nam", "ND", "eisDST", "inh", "Vai", "VAI",
-    "fo", "hel", "IST", "Commun", "Ofr", "becaus",
-    "curren", "infintie", "ofr", "olt", "pluse",
-    "pointint", "lates", "isuses", "infinit"
-]
+extend-words = { ue = "ue", nd = "nd", lok = "lok", Thm = "Thm", sur = "sur", leasure = "leasure", asure = "asure", nulll = "nulll", finf = "finf", iy = "iy", ERROR_FILENAME_EXCED_RANGE = "ERROR_FILENAME_EXCED_RANGE", FLE = "FLE", nam = "nam", ND = "ND", eis = "eis", inh = "inh", Vai = "Vai", VAI = "VAI", fo = "fo", hel = "hel", IST = "IST", Commun = "Commun", Ofr = "Ofr", becaus = "becaus", curren = "curren", infintie = "infintie", ofr = "ofr", olt = "olt", pluse = "pluse", pointint = "pointint", lates = "lates", isuses = "isuses", infinit = "infinit" }
+extend-identifiers = { ERROR_FILENAME_EXCED_RANGE = "ERROR_FILENAME_EXCED_RANGE" }
