--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -152,7 +152,7 @@ jobs:
           julec test --compiler clang -o test std/time/test
           ./test
 
-      - name: Test - std/unicode::utf8
+      - name: Test - std/unicode/utf8
         run: |
           julec test --compiler clang -o test std/unicode/utf8/test
           ./test
